Added all the basics - pushing to test functionality

--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <html>
 	<head>
-		<title>TODO</title>
+		<title>Main</title>
+        <script type="text/javascript" src="javascript.js"></script>
+        <link rel="stylesheet" href="styles.css">
 	</head>
+    <nav id="navBar"></nav>
     <body>
-        <mark>TODO: implement your portfolio.</mark>
+        <div id="indexDiv">
+            <h1>Ben Cravens</h1>
+            <img src="IMG_1099.pdf" alt="Photo of Ben Cravens, a man smiling on a bridge in the forest">
+        </div>
     </body>
+    <footer id="foot"></footer>
 </html>
