Fixed the image not showing, added padding to the divs hopefully

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div id="indexDiv">
             <h1>Ben Cravens</h1>
-            <img src="IMG_1099.pdf" alt="Photo of Ben Cravens, a man smiling on a bridge in the forest">
+            <img src="IMG_1099.png" alt="Photo of Ben Cravens, a man smiling on a bridge in the forest">
         </div>
     </body>
     <footer id="foot"></footer>
