Added page sections for the footer and nav

--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
         <script type="text/javascript" src="javascript.js"></script>
         <link rel="stylesheet" href="styles.css">
 	</head>
-    <nav id = "navBar"></nav>
+    <nav id = "navBar" role="navigation"></nav>
     <body>
         <div>
             <h2>Technologies</h2>
@@ -81,5 +81,5 @@
             </ul>
         </div>
     </body>
-    <footer id="foot"></footer>
+    <footer id="foot" role="contentinfo"></footer>
 </html>
