--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <script type="text/javascript" src="javascript.js"></script>
         <link rel="stylesheet" href="styles.css">
 	</head>
-    <nav id="navBar"></nav>
+    <nav id="navBar" role="navigation"></nav>
     <body>
         <div id="indexDiv">
             <h1>Ben Cravens</h1>
             <img src="IMG_1099.png" alt="Photo of Ben Cravens, a man smiling on a bridge in the forest">
         </div>
     </body>
-    <footer id="foot"></footer>
+    <footer id="foot" role="contentinfo"></footer>
 </html>
