--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
         <script type="text/javascript" src="javascript.js"></script>
         <link rel="stylesheet" href="styles.css">
 	</head>
-    <nav id="navBar"></nav>
+    <nav id="navBar" role="navigation"></nav>
     <body>
         <h1>Projects</h1>
 
@@ -28,5 +28,5 @@
             <h2></h2>
         </div>
     </body>
-    <footer id="foot"></footer>
+    <footer id="foot" role="contentinfo"></footer>
 </html>
