Made a banner sort of thing for each page

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,9 @@
 	</head>
     <nav id="navBar" role="navigation"></nav>
     <body>
-        <h1>Projects</h1>
+        <div id="h1Div">
+            <h1>Projects</h1>
+        </div>
 
         <div>
             <h2>CSSE 120 - Capstone Team Project</h2>
