--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,9 @@
 	</head>
     <nav id = "navBar" role="navigation"></nav>
     <body>
+        <div id="h1Div">
+            <h1>Resume</h1>
+        </div>
         <div>
             <h2>Technologies</h2>
             <ul>
