--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 	</head>
     <nav id="navBar" role="navigation"></nav>
     <body>
-        <div id="indexDiv">
+        <div id="h1Div">
             <h1>Ben Cravens</h1>
+        </div>
+        <div id="indexDiv">
             <img src="IMG_1099.png" alt="Photo of Ben Cravens, a man smiling on a bridge in the forest">
         </div>
     </body>
