Changes to new banner thing

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 	</head>
     <nav id="navBar" role="navigation"></nav>
     <body>
-        <div id="h1Div">
+        <div id="h1Div"></div>
+        <div id="h1Div2">
             <h1>Ben Cravens</h1>
         </div>
+        <div id="h1Div"></div>
         <div id="indexDiv">
             <img src="IMG_1099.png" alt="Photo of Ben Cravens, a man smiling on a bridge in the forest">
         </div>
