--- a/portfolio.html
+++ b/portfolio.html
@@ -6,9 +6,11 @@
 	</head>
     <nav id="navBar" role="navigation"></nav>
     <body>
-        <div id="h1Div">
+        <div id="h1Div"></div>
+        <div id="h1Div2">
             <h1>Projects</h1>
         </div>
+        <div id="h1Div"></div>
 
         <div>
             <h2>CSSE 120 - Capstone Team Project</h2>
