--- a/resume.html
+++ b/resume.html
@@ -6,9 +6,11 @@
 	</head>
     <nav id = "navBar" role="navigation"></nav>
     <body>
-        <div id="h1Div">
+        <div id="h1Div"></div>
+        <div id="h1Div2">
             <h1>Resume</h1>
         </div>
+        <div id="h1Div"></div>
         <div>
             <h2>Technologies</h2>
             <ul>
