--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,9 @@
             <p>Created a python game using along with a partner for the class' final project.</p>
             <p>Game created was a card game inspired by Slay the Spire. We created an infinitely scaling battle simulation, where you use randomly drawn cards to defeat enemies using strategy</p>
             <p>Project was created using Python, with the notable library PyGame and the IDE PyCharm</p>
-            <img src="Python Card Game.png" alt="Picture of card game created in Python">
+            <div id="indexDiv">
+                <img src="Python Card Game.png" alt="Picture of card game created in Python">
+            </div>
         </div>
         
         <div>
@@ -25,7 +27,9 @@
             <p>Created a game in Java along with a partner for the class' final project</p>
             <p>For the project, we created our own version of Celeste using principles learned throughout the course, such as avoiding code duplication, having high cohesion, low coupling, and more.</p>
             <p>The project was created using Java and the Eclipse IDE, as well as GitHub for version control</p>
-            <img src="Celeste Game.png" alt="Picture of a simple version of Celeste">
+            <div id="indexDiv">
+                <img src="Celeste Game.png" alt="Picture of a simple version of Celeste">
+            </div>
         </div>
     </body>
     <footer id="foot" role="contentinfo"></footer>
