Fixed an oversight

--- a/resume.html
+++ b/resume.html
@@ -47,7 +47,7 @@
             <h2>Work Experience</h2>
             <h3>Intern at Kroger</h3>
             <p>June-August 2025</p>
-            <li></li>
+            <li>Performed work at Kroger where I managed data inside of Azure Cloud, using software like ADX, Azure Synapse, and Databricks to add fields to the data platform being used there.</li>
         </div>
         <div>
             <h2>Education Experience</h2>
